# nsga-compare

./: .gitignore  README.md  main_test.py  pyproject.toml  requirements.txt
src/: opt.py  utils.py
test/payload/: config1.json  config2.json  config3.json  config4.json  config5.json
test/problem/: problems.py
